@@ -1,9 +1,10 @@
+
+import com.B0cka.dto.CommentRequestDto;
 import com.B0cka.model.Comment;
 import com.B0cka.model.Post;
 import com.B0cka.repository.CommentsRepository;
 import com.B0cka.repository.PostsRepository;
 import com.B0cka.service.CommentService;
-
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -13,8 +14,6 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -22,144 +21,171 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@DisplayName("Testing CommentService in isolation")
+@DisplayName("CommentService unit tests")
 class CommentServiceTest {
 
     @Mock
-    private CommentsRepository commentsRepo;
-    @Mock
-    private PostsRepository postsRepo;
-    @InjectMocks
-    private CommentService service;
+    private CommentsRepository commentsRepository;
 
-    private Post samplePost;
-    private Comment sampleComment;
+    @Mock
+    private PostsRepository postsRepository;
+
+    @InjectMocks
+    private CommentService commentService;
+
+    private Post post;
+    private Comment comment;
 
     @BeforeEach
-    void prepareData() {
-        samplePost = Post.builder()
+    void setUp() {
+        post = Post.builder()
+                .id(1L)
+                .title("Test post")
+                .text("Body")
+                .tags(List.of("java"))
+                .likesCount(0L)
+                .commentsCount(0L)
+                .build();
+
+        comment = Comment.builder()
                 .id(10L)
-                .title("My Post")
-                .text("Some text for checking")
-                .likesCount(0L).commentsCount(0L)
-                .tags(List.of("unit", "mockito"))
-                .build();
-
-        sampleComment = Comment.builder()
-                .id(5L)
-                .postId(10L)
-                .text("initial comment")
+                .postId(1L)
+                .text("Test comment")
                 .build();
     }
 
     @Test
-    @DisplayName("Create comment: happy path")
-    void createShouldPersistComment() {
-        when(postsRepo.findById(10L)).thenReturn(Optional.of(samplePost));
-        when(commentsRepo.save(any())).thenAnswer(inv -> inv.getArgument(0));
+    @DisplayName("createComment: успех при валидных данных")
+    void createComment_ok() {
+        CommentRequestDto dto = new CommentRequestDto();
+        dto.setPostId(1L);
+        dto.setText("New comment");
 
-        Comment result = service.createComment(10L, sampleComment);
-
-        assertAll(
-                () -> assertNotNull(result),
-                () -> assertEquals("initial comment", result.getText()),
-                () -> verify(commentsRepo, atLeastOnce()).save(any())
+        when(postsRepository.findById(1L)).thenReturn(Optional.of(post));
+        when(commentsRepository.save(dto)).thenReturn(
+                Comment.builder().id(100L).postId(1L).text("New comment").build()
         );
+
+        Comment result = commentService.createComment(1L, dto);
+
+        assertNotNull(result);
+        assertEquals(1L, result.getPostId());
+        assertEquals("New comment", result.getText());
+        verify(commentsRepository, times(1)).save(dto);
     }
 
     @Test
-    @DisplayName("Create comment: throws if post absent")
-    void createShouldFailIfPostMissing() {
-        when(postsRepo.findById(anyLong())).thenReturn(Optional.empty());
-        IllegalArgumentException ex =
-                assertThrows(IllegalArgumentException.class,
-                        () -> service.createComment(99L, sampleComment));
-        assertTrue(ex.getMessage().toLowerCase().contains("not found"));
-    }
+    @DisplayName("createComment: бросает, если пост не найден")
+    void createComment_postNotFound() {
+        CommentRequestDto dto = new CommentRequestDto();
+        dto.setPostId(1L);
+        dto.setText("comment");
 
-    @Test
-    @DisplayName("Create comment: throws for blank text")
-    void createShouldRejectEmptyText() {
-        when(postsRepo.findById(10L)).thenReturn(Optional.of(samplePost));
-        sampleComment.setText("   ");
+        when(postsRepository.findById(1L)).thenReturn(Optional.empty());
+
         assertThrows(IllegalArgumentException.class,
-                () -> service.createComment(10L, sampleComment));
+                () -> commentService.createComment(1L, dto));
+        verify(commentsRepository, never()).save(any());
+    }
+
+    @Test
+    @DisplayName("createComment: бросает, если текст пустой")
+    void createComment_blankText() {
+        CommentRequestDto dto = new CommentRequestDto();
+        dto.setPostId(1L);
+        dto.setText("   ");
+
+        when(postsRepository.findById(1L)).thenReturn(Optional.of(post));
+
+        assertThrows(IllegalArgumentException.class,
+                () -> commentService.createComment(1L, dto));
     }
 
     @Nested
-    @DisplayName("Finding comments")
-    class FindingBlock {
+    @DisplayName("finding comments")
+    class Finding {
 
         @Test
-        @DisplayName("Fetch by id: ok")
-        void getExistingComment() {
-            when(postsRepo.findById(10L)).thenReturn(Optional.of(samplePost));
-            when(commentsRepo.findById(10L, 5L)).thenReturn(Optional.of(sampleComment));
+        @DisplayName("findById: успешное получение")
+        void findById_ok() {
+            when(postsRepository.findById(1L)).thenReturn(Optional.of(post));
+            when(commentsRepository.findById(1L, 10L)).thenReturn(Optional.of(comment));
 
-            Comment found = service.findById(10L, 5L);
-            assertEquals(5L, found.getId());
+            Comment result = commentService.findById(1L, 10L);
+
+            assertEquals(10L, result.getId());
+            assertEquals(1L, result.getPostId());
         }
 
         @Test
-        @DisplayName("Fetch by id: unknown post")
-        void getThrowsIfPostNotExist() {
-            when(postsRepo.findById(10L)).thenReturn(Optional.empty());
-            assertThrows(IllegalArgumentException.class, () -> service.findById(10L, 5L));
+        @DisplayName("findById: падает, если пост не найден")
+        void findById_postMissing() {
+            when(postsRepository.findById(1L)).thenReturn(Optional.empty());
+            assertThrows(IllegalArgumentException.class,
+                    () -> commentService.findById(1L, 10L));
         }
 
         @Test
-        @DisplayName("Fetch by post id: returns list")
-        void getListOfComments() {
-            when(postsRepo.findById(10L)).thenReturn(Optional.of(samplePost));
-            when(commentsRepo.findByPostId(10L)).thenReturn(Collections.singletonList(sampleComment));
+        @DisplayName("findByPostId: возвращается список")
+        void findByPostId_ok() {
+            when(postsRepository.findById(1L)).thenReturn(Optional.of(post));
+            when(commentsRepository.findByPostId(1L)).thenReturn(List.of(comment));
 
-            List<Comment> list = service.findByPostId(10L);
+            List<Comment> result = commentService.findByPostId(1L);
 
-            assertEquals(1, list.size());
-            verify(commentsRepo).findByPostId(10L);
+            assertEquals(1, result.size());
+            verify(commentsRepository).findByPostId(1L);
         }
     }
 
     @Test
-    @DisplayName("Update comment: text changed")
-    void updateShouldModifyText() {
+    @DisplayName("updateComment: меняет текст")
+    void updateComment_ok() {
         Comment toUpdate = Comment.builder()
-                .id(5L).postId(10L).text("modified").build();
+                .id(10L)
+                .postId(1L)
+                .text("Updated")
+                .build();
 
-        when(postsRepo.findById(10L)).thenReturn(Optional.of(samplePost));
-        when(commentsRepo.findById(10L, 5L)).thenReturn(Optional.of(sampleComment));
-        when(commentsRepo.update(any())).thenAnswer(inv -> inv.getArgument(0));
+        when(postsRepository.findById(1L)).thenReturn(Optional.of(post));
+        when(commentsRepository.findById(1L, 10L)).thenReturn(Optional.of(comment));
+        when(commentsRepository.update(any(Comment.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
 
-        Comment updated = service.updateComment(10L, toUpdate);
-        assertEquals("modified", updated.getText());
-        verify(commentsRepo).update(any());
+        Comment result = commentService.updateComment(1L, toUpdate);
+
+        assertEquals("Updated", result.getText());
+        verify(commentsRepository).update(any(Comment.class));
     }
 
     @Test
-    @DisplayName("Update comment: fails when missing id")
-    void updateShouldFailIfCommentAbsent() {
-        when(postsRepo.findById(10L)).thenReturn(Optional.of(samplePost));
-        when(commentsRepo.findById(10L, 5L)).thenReturn(Optional.empty());
+    @DisplayName("updateComment: бросает, если комментарий не найден")
+    void updateComment_notFound() {
+        when(postsRepository.findById(1L)).thenReturn(Optional.of(post));
+        when(commentsRepository.findById(1L, 10L)).thenReturn(Optional.empty());
+
         assertThrows(IllegalArgumentException.class,
-                () -> service.updateComment(10L, sampleComment));
+                () -> commentService.updateComment(1L, comment));
     }
 
     @Test
-    @DisplayName("Delete comment successfully")
-    void deletionScenario() {
-        when(postsRepo.findById(10L)).thenReturn(Optional.of(samplePost));
-        when(commentsRepo.findById(10L, 5L)).thenReturn(Optional.of(sampleComment));
+    @DisplayName("deleteComment: успешное удаление")
+    void deleteComment_ok() {
+        when(postsRepository.findById(1L)).thenReturn(Optional.of(post));
+        when(commentsRepository.findById(1L, 10L)).thenReturn(Optional.of(comment));
 
-        service.deleteComment(10L, 5L);
+        commentService.deleteComment(1L, 10L);
 
-        verify(commentsRepo, times(1)).delete(10L, 5L);
+        verify(commentsRepository).delete(1L, 10L);
     }
 
     @Test
-    @DisplayName("Delete: comment not found -> exception")
-    void deletionMissingComment() {
-        when(postsRepo.findById(10L)).thenReturn(Optional.of(samplePost));
-        when(commentsRepo.findById(10L, 5L)).thenReturn(Optional.empty());
-        assertThrows(IllegalArgumentException.class, () -> service.deleteComment(10L, 5L));
+    @DisplayName("deleteComment: бросает, если комментарий не найден")
+    void deleteComment_notFound() {
+        when(postsRepository.findById(1L)).thenReturn(Optional.of(post));
+        when(commentsRepository.findById(1L, 10L)).thenReturn(Optional.empty());
+
+        assertThrows(IllegalArgumentException.class,
+                () -> commentService.deleteComment(1L, 10L));
     }
 }
